--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — Kelvin Mutwiri</title>
+  <title>Contact - Kelvin Mutwiri</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -46,9 +46,6 @@
 
   <!-- ================= Main Content ================= -->
   <main>
-<section class="contact-section" data-reveal>
-
-
 <section class="contact-section" data-reveal>
   <div class="container contact-grid">
     <div class="contact-left">
